# reactcc

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: index.ts  symbols.ts  types.ts
src/components/: Frame.ts  Image.ts  Line.ts  Text.ts
src/lib/: Renderer.ts
src/lib/element/: Drawable.ts  DrawableBase.ts  Element.ts  ElementBase.ts
src/lib/events/: EventEmitter.ts  IEventEmitter.ts
src/lib/reconciler/: Hooks.ts  index.ts  types.ts
tests/: package-lock.json  package.json  tsconfig.bundle.json  tsconfig.json
tests/src/: App.tsx  main.ts
