[tool.poetry]
name = "reactcc"
version = "0.1.0"
description = ""
authors = ["Syntheticdev <35655841+Synthetic-Dev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
